deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todolist-deployment
  labels:
    app: todolist
spec:
  replicas: 5
  selector:
    matchLabels:
      app: todolist
  template:
    metadata:
      labels:
        app: todolist
    spec:
      containers:
      - name: todolist
        image: ranga/todolist
        ports:
          - containerPort: 80
