service-todolist.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"v1","kind":"Service","metadata":{"annotations":{},"labels":{"app":"todolist"},"name":"todolist","namespace":"test1"},"spec":{"ports":[{"port":80,"targetPort":3000}],"selector":{"app":"todolist"},"type":"LoadBalancer"}}
  creationTimestamp: "2022-06-05T15:59:46Z"
  labels:
    app: todolist
  name: todolist
  namespace: test1
  resourceVersion: "153997641"
  selfLink: /api/v1/namespaces/test1/services/todolist
  uid: 85cc76a1-e4e8-11ec-954c-3ec50c5458bc
spec:
  clusterIP: 172.18.1.28
  externalTrafficPolicy: Cluster
  ports:
  - nodePort: 30055
    port: 80
    protocol: TCP
    targetPort: 3000
  selector:
    app: todolist
  sessionAffinity: None
  type: LoadBalancer
status:
  loadBalancer: {}
