service.yaml
apiVersion: v1
kind: Service
metadata:
  name: todolist-service
spec:
  selector:
    app: todolist
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
