ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
spec:
  ingressClassName: nginx
  rules:
  - host: todolist.example.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: todolist-service
            port:
              number: 80 
  - host: todolist2.example.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: todolist
            port:
              number: 80
